@@ -1,6 +1,6 @@
 {"metadata": {"user": {"id": "123", "email": "s@test.com", "username": "john"}, "process": {"ppid": 6789, "pid": 1234,"argv": ["node", "server.js"], "title": "node"}, "system": {"platform": "darwin", "hostname": "prod1.example.com", "architecture": "x64"}, "service": {"name": "backendspans", "language": {"version": "8", "name": "ecmascript"}, "agent": {"version": "3.14.0", "name": "elastic-node"}, "environment": "staging", "framework": {"version": "1.2.3", "name": "Express"}, "version": "5.1.3", "runtime": {"version": "8.0.0", "name": "node"}}}}
 {"span": {"trace_id": "fdedef0123456789abcdef9876543210", "parent_id": "abcdef0123456789","id": "abcdef01234567", "transaction_id": "01af25874dec69dd", "name": "GET /api/types", "type": "request","start": 0, "duration": 141.581 }}
-{ "span": {"trace_id": "abcdef0123456789abcdef9876543210", "id": "1234abcdef56789568", "transaction_id": "ab45781d265894fe", "parent": 45, "name": "GET /api/types", "type": "request", "start": 0, "duration": 32.592981 } }
-{ "span": {"trace_id": "abcdef0123456789abcdef9876543210", "id": "0123456a89012345", "transaction_id": "ab23456a89012345", "parent": 1, "name": "GET /api/types", "type": "request", "start": 1.845, "duration": 3.5642981, "stacktrace": [], "context": {}  }}
-{ "span": {"trace_id": "abcdef0123456789abcdef9876543210","id": "abcde56a89012345", "transaction_id": "bed3456a89012345", "name": "get /api/types", "type": "request", "start": 0, "duration": 13.9802981, "stacktrace": null, "context": null }}
-{ "span": {"trace_id": "abcdef0123456789abcdef9876543210", "id": "1234567890aaaade", "transaction_id": "aff4567890aaaade", "parent": null, "name": "SELECT FROM product_types", "type": "db.postgresql.query", "start": 2.83092, "duration": 3.781912, "stacktrace": [{ "filename": "net.js", "lineno": 547},{"filename": "file2.js", "lineno": 12, "post_context": [ "    ins.currentTransaction = prev", "}"]}, { "function": "onread", "abs_path": "net.js", "filename": "net.js", "lineno": 547, "library_frame": true, "vars": { "key": "value" }, "module": "some module", "colno": 4, "context_line": "line3", "pre_context": [ "  var trans = this.currentTransaction", "" ], "post_context": [ "    ins.currentTransaction = prev", "    return result"] }], "context": { "db": { "instance": "customers", "statement": "SELECT * FROM product_types WHERE user_id=?", "type": "sql", "user": "readonly_user" }, "http": { "url": "http://localhost:8000" } } }}
+{ "span": {"trace_id": "abcdef0123456789abcdef9876543210", "id": "1234abcdef56789568", "transaction_id": "ab45781d265894fe", "parent_id": "0000000011111111", "parent": 45, "name": "GET /api/types", "type": "request", "start": 0, "duration": 32.592981 } }
+{ "span": {"trace_id": "abcdef0123456789abcdef9876543210", "id": "0123456a89012345", "transaction_id": "ab23456a89012345", "parent": 1, "parent_id": "abcdefabcdef7890", "name": "GET /api/types", "type": "request", "start": 1.845, "duration": 3.5642981, "stacktrace": [], "context": {}  }}
+{ "span": {"trace_id": "abcdef0123456789abcdef9876543210","id": "abcde56a89012345", "parent_id": "ababcdcdefefabde", "transaction_id": "bed3456a89012345", "name": "get /api/types", "type": "request", "start": 0, "duration": 13.9802981, "stacktrace": null, "context": null }}
+{ "span": {"trace_id": "abcdef0123456789abcdef9876543210", "id": "1234567890aaaade", "parent_id": "abcdef0123456789", "transaction_id": "aff4567890aaaade", "parent": null, "name": "SELECT FROM product_types", "type": "db.postgresql.query", "start": 2.83092, "duration": 3.781912, "stacktrace": [{ "filename": "net.js", "lineno": 547},{"filename": "file2.js", "lineno": 12, "post_context": [ "    ins.currentTransaction = prev", "}"]}, { "function": "onread", "abs_path": "net.js", "filename": "net.js", "lineno": 547, "library_frame": true, "vars": { "key": "value" }, "module": "some module", "colno": 4, "context_line": "line3", "pre_context": [ "  var trans = this.currentTransaction", "" ], "post_context": [ "    ins.currentTransaction = prev", "    return result"] }], "context": { "db": { "instance": "customers", "statement": "SELECT * FROM product_types WHERE user_id=?", "type": "sql", "user": "readonly_user" }, "http": { "url": "http://localhost:8000" } } }}
